samples/_failures_safe/1761458837_d40a46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2008c962.c: In function ‘main’:
./samples/SAFE/__tmp_2008c962.c:168:5: error: expected expression at end of input
  168 |     free_matrix(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_2008c962.c:168:5: error: expected declaration or statement at end of input
